# capylang

./: .clang-format  .gitignore  CHARTA.md  CMakeLists.txt  README.md  args_parse.cpp  args_parse.h  args_parse.hpp  build.ps1  compile.ps1  crash.capy  drawing.capy  dwarf_plays.py  emitter.cpp  emitter.hpp  example.capy  example.ps1  extract_samples.py  hello.cpp  lexer.cpp  lexer.hpp  main.cpp  main.py  mkdocs.yml  parser.cpp  parser.hpp  pyproject.toml  run.ps1  semantics.cpp  semantics.hpp
.github/actions/setup-wasm-toolchain/: action.yml
.github/workflows/: action.yml  ci.yml  docs.yml
antlr-tooling/: verify_grammar.py
capylang/: .gitignore  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
capylang/client/: package-lock.json  package.json
capylang/client/src/: extensions.ts
capylang/server/: CMakeLists.txt  package.json
capylang/server/src/: main.cpp
capylang/syntaxes/: capy.tmLanguage.json
cmake/: wasm-wasip-clang.cmake
doc/: compiler-pipeline.md  design-decisions.md  design_decisions.md  index.md  journey.md  places-and-locations.md  roadmap.md  structure.md  todo.md
doc/ideas/: ast_reflection_dump_constrained_sketch.md  ast_reflection_dump_hybrid_sketch.md  ast_reflection_dump_sketch.md
doc/stylesheets/: extra.css
examples/: ansi_codes.capy  crash.capy  drawing.capy  example.capy
grammar/: CapylangLexer.g4  CapylangLexerGrammar.g4  CapylangParser.g4  CapylangParserGrammar.g4  textmate_keyword_scopes.json
playground/: TinyWASI.js  easywasm_wasi.js  playground.html  playground.py  zenfs_dom.js
src/: anf.cpp  anf.hpp  args_parse.cpp  args_parse.hpp  ast.cpp  ast.hpp  ast_nodes.hpp  ast_visitor.cpp  ast_visitor.hpp  diagnostics.cpp  diagnostics.hpp  dumpable.hpp  emitter.cpp  emitter.hpp  ir.cpp  ir.hpp  lexer.cpp  lexer.hpp  lir.cpp  lir.hpp  lir_based_emitter.cpp  lir_based_emitter.hpp  lir_dump.cpp  lir_dump.hpp  lir_dump.ipp  lir_generator.cpp  lir_generator.hpp  lir_lowering.cpp  lir_lowering.hpp  lir_nodes.hpp  lir_visitor.cpp  lir_visitor.hpp  locations.hpp  lower_cabi.cpp  lower_cabi.hpp  lowering_strategy.hpp  main.cpp  normalization.cpp  normalization.hpp  parser.cpp  (+16 more)
src/ndef/: ast.ndef  backend_cpp.map  lir.ndef
src/tests/: nodes_to_test.hpp  test_argparser.cpp  test_dumpable.cpp
tests/: conftest.py  test_bools.py  test_builtins.py  test_comments.py  test_control_structures.py  test_error_locations.py  test_expression_errors.py  test_expressions.py  test_func_signature_errors.py  test_functions.py  test_globals.py  test_inference.py  test_intrinsics.py  test_module.py  test_numbers.py  test_procedures.py  test_records.py  test_statements.py  test_strings.py  test_tooling.py  test_type_check_errors.py  tools.py
tools/: .gitignore  extract_samples.py  update_textmate_grammar.py  verify_grammar.py
