[project]
name = "capylang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
markers = [
    "good: tests for capy code that compiles and runs",
    "parse_error: source code that fails the parsing step",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
]
