[project]
name = "capylang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.1.1",
    "antlr4-python3-runtime==4.13.2",
    "antlr4-tools==0.2.2",
    "silwright>=0.3.0",
]

[tool.pytest.ini_options]
markers = [
    "good: tests for capy code that compiles and runs",
    "parse_error: source code that fails the parsing step",
    "tooling: tests for tooling outside of the actual compiler",
    "no_compile_matrix: opt out of compile backend parametrization",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
]
